--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -36,18 +36,20 @@
             <div class="row mt-3">
                 <div class="col-12 col-md-4">
                     <input type="date" name="date" value="" id="form-date"
-                           class="form-control no-glow bobooky-purple form-control-lg rounded-pill datepicker">
+                           class="form-control no-glow bobooky-purple form-control pl-4 rounded-pill datepicker border-dark">
                 </div>
                 <div class="col-12 mt-3 mt-md-0 col-md">
-                    <div class="input-group">
-                        <input type="text" name="q" id="form-q" class="no-glow bobooky-purple form-control form-control-lg rounded-bobooky border-right-0" placeholder="Search more than 700 books">
-                        <div class="input-group-append ">
-                            <button class="btn border font-body rounded-bobooky no-glow bobooky-purple btn-lg search-button border-left-0" type="button">
-                                <i class="fa fa-search text-dark"></i>
-                            </button>
+                    <div class="form-group search-bar-wrapper">
+                        <div class="input-group">
+                            <input type="text" name="q" id="form-q" class="search-bar form-control pl-4 border-right-0"
+                                   placeholder="Search hundreds of events">
+                            <div class="input-group-append ">
+                                <button class="btn search-button round border-left-0 pr-4" type="submit">
+                                    <i class="fa fa-search border-0"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
-
                 </div>
 
             </div>
