--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -18,12 +18,12 @@
 
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="secondary"></div>
-<div class="section container main text-white vh-100">
+<div class="section container main text-white">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 pt-3">
                 <div class="d-none d-md-block">
-                    <div class="position-fixed">
+                    <div class="position-fixed bg-dark in-front">
                         <h2 class="font-weight-bold text-secondary my-3">About you</h2>
                         <div class="container mt-4" style="font-size: 16px;">
                             <div class="row">
