--- a/public/search/index.html
+++ b/public/search/index.html
@@ -18,7 +18,7 @@
 <body>
 <!--
 Loading template
-
+-->
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
@@ -26,7 +26,7 @@ Loading template
         <h6 class="text-white mt-5">Searching more than 700 books..</h6>
     </div>
 </div>
--->
+
 
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="pink"></div>
@@ -36,40 +36,43 @@ Loading template
         <form class="search-form">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <div class="input-group">
-                        <input type="search" name="q" value="" class="form-control no-glow bobooky-pink form-control-lg rounded-bobooky search-bar border-right-0"
-                               placeholder="Search more than 700 books..">
-                        <div class="input-group-append ">
-                            <button class="btn border no-glow search-button rounded-bobooky border-left-0 pr-4" type="button">
-                                <i class="fa fa-search text-dark"></i>
-                            </button>
+
+                    <div class="form-group search-bar-wrapper">
+                        <div class="input-group">
+                            <input type="text" name="q" class="search-bar form-control pl-4 border-right-0"
+                                   placeholder="Search more than 700 books">
+                            <div class="input-group-append ">
+                                <button class="btn search-button round border-left-0 pr-4" type="submit">
+                                    <i class="fa fa-search border-0"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
 
                 </div>
-                <div class="col-12 col-lg-6 d-flex justify-content-between mt-3 mt-lg-0">
+                <div class="col-12 col-lg-6 mt-3 mt-lg-0">
                     <div class="row">
-                    <div class="col-12 col-md-auto">
-                        <select name="orderby"
-                                class="text-capitalize font-body form-control w-100 no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white mb-3 filter orderby">
-                            <option selected value="default">order by</option>
-                            <option value="price">price</option>
-                            <option value="author">author</option>
-                            <option value="name">name</option>
-                            <option value="year">year</option>
-                        </select>
-                    </div>
-                        <div class="col-6 col-md-auto">
-                        <select name="genre"
-                                class="text-capitalize font-body w-100 form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white filter genre">
-                            <option selected value="default">genre</option>
-                        </select>
-                            </div>
-                        <div class="col-6 col-md-auto">
-                        <select name="theme"
-                                class="text-capitalize font-body form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white filter theme">
-                            <option selected value="default">theme</option>
-                        </select>
+                        <div class="col-12 col-md-4">
+                            <select name="orderby"
+                                    class="text-capitalize font-body form-control w-100 no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white mb-3 filter orderby">
+                                <option selected value="default">order by</option>
+                                <option value="price">price</option>
+                                <option value="author">author</option>
+                                <option value="name">name</option>
+                                <option value="year">year</option>
+                            </select>
+                        </div>
+                        <div class="col-6 col-md-4">
+                            <select name="genre"
+                                    class="text-capitalize font-body w-100 form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white filter genre">
+                                <option selected value="default">genre</option>
+                            </select>
+                        </div>
+                        <div class="col-6 col-md-4">
+                            <select name="theme"
+                                    class="text-capitalize font-body form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white filter theme">
+                                <option selected value="default">theme</option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -83,12 +86,6 @@ Loading template
     <div class="container">
         <h4 class="text-dark font-weight-bold">Authors</h4>
         <div class="author-container mt-5"></div>
-    </div>
-</div>
-<div class="section events mt-5">
-    <div class="container">
-        <h4 class="text-dark font-weight-bold">Events</h4>
-        <div class="event-container mt-5"></div>
     </div>
 </div>
 <div class="section books mt-5">
