--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -17,6 +17,27 @@
 <body>
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="pink"></div>
+
+<!-- Modal -->
+<div class="modal fade" id="address-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Select an address</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal-addresses-list">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="continue-modal-button">Continue</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid bg-primary px-0">
     <div class="container h-100">
         <h5 class="text-white my-auto title py-3">Shopping cart</h5>
