--- a/public/discover/index.html
+++ b/public/discover/index.html
@@ -19,7 +19,7 @@
 <div class="container-fluid p-0 position-relative">
     <div class="container-fluid discover-section vh-100 justify-content-center align-content-center d-flex flex-column justify-content-center">
         <div class="container text-white">
-            <ul class="nav align-baseline mb-3" id="pills-tab" role="tablist">
+            <ul class="nav align-baseline mb-0 mt-3"  id="pills-tab" role="tablist">
                 <li class="mr-5">
                     <h3>Choose your next reading by:</h3>
                 </li>
@@ -33,77 +33,93 @@
                 <li class="nav-item">
                     <a class="text-decoration-none" id="pills-themes-tab" data-toggle="pill" href="#pills-themes"
                        role="tab"
-                       aria-controls="pills-genre" aria-selected="true"><h3 id="themes"
-                                                                            class="bottom border-white text-white">
+                       aria-controls="pills-genre" aria-selected="true">
+                        <h3 id="themes" class="bottom border-white text-white">
                         Themes</h3></a>
                 </li>
             </ul>
             <div class="tab-content rounded-bobooky position-relative" id="pills-tabContent">
                 <div class="blurred-bg rounded-bobooky h-100 w-100 position-absolute"></div>
-                <div class="tab-pane fade show m-5 p-5 position-relative genres" id="pills-genre" role="tabpanel"
+                <div class="tab-pane fade show m-4 p-3 p-md-5 position-relative genres" id="pills-genre" role="tabpanel"
                      aria-labelledby="pills-genre-tab">
                     <div class="row text">
-                        <div class="col-12 col-md-6">
-                            <a href="http://localhost/search/theme/?theme=Mistery"
+                        <div class="col-12 col-md-6 link-pink px-0">
+                            <a href="/search/genre/?genre=childhood"
                                class="text-white text-decoration-none">Childhood</a><br>
-                            <a href="http://localhost/search/theme/?theme=Chick-Lit"
-                               class="text-white text-decoration-none">Comic</a><br>
-                            <a href="http://localhost/search/theme/?theme=Adventure"
+                            <a href="/search/genre/?genre=comedy"
+                               class="text-white text-decoration-none">Comedy</a><br>
+                            <a href="/search/genre/?genre=comics"
+                               class="text-white text-decoration-none">Comics</a><br>
+                            <a href="/search/genre/?genre=contemporary"
+                               class="text-white text-decoration-none">Contemporary</a><br>
+                            <a href="/search/genre/?genre=crime"
+                               class="text-white text-decoration-none">Crime</a><br>
+                            <a href="/search/genre/?genre=fantasy"
                                class="text-white text-decoration-none">Fantasy</a><br>
-                            <a href="http://localhost/search/theme/?theme=Dystopia"
-                               class="text-white text-decoration-none">Graphic
-                                Novel</a><br>
-                            <a href="http://localhost/search/theme/?theme=Classics"
+                            <a href="/search/genre/?genre=fiction"
+                               class="text-white text-decoration-none">Fiction</a><br>
+                            <a href="/search/genre/?genre=graphic-novel"
+                               class="text-white text-decoration-none">Graphic Novel</a><br>
+                            <a href="/search/genre/?genre=horror"
                                class="text-white text-decoration-none">Horror</a><br>
-                            <a href="http://localhost/search/theme/?theme=Epic-Fantasy"
-                               class="text-white text-decoration-none"></a><br>
+                            <a href="/search/genre/?genre=literature"
+                               class="text-white text-decoration-none">Literature</a><br>
 
                         </div>
-                        <div class="col-12 col-md-6">
-                            <a href="http://localhost/search/theme/?theme=Historical"
-                               class="text-white text-decoration-none">Literature</a><br>
-                            <a href="http://localhost/search/theme/?theme=Magic"
+                        <div class="col-12 col-md-6 link-pink px-0">
+                            <a href="/search/genre/?genre=non-fiction"
+                               class="text-white text-decoration-none">Non-Fiction</a><br>
+                            <a href="/search/genre/?genre=plays"
+                               class="text-white text-decoration-none">Plays</a><br>
+                            <a href="/search/genre/?genre=religion"
                                class="text-white text-decoration-none">Religion</a><br>
-                            <a href="http://localhost/search/theme/?theme=Fear" class="text-white text-decoration-none">Romance</a><br>
-                            <a href="http://localhost/search/theme/?theme=Dystopia"
+                            <a href="/search/genre/?genre=romance"
+                               class="text-white text-decoration-none">Romance</a><br>
+                            <a href="/search/genre/?genre=sci-fi"
                                class="text-white text-decoration-none">Sci-fi</a><br>
-                            <a href="http://localhost/search/theme/?theme=Humor"
+                            <a href="/search/genre/?genre=short-stories"
+                               class="text-white text-decoration-none">Short Stories</a><br>
+                            <a href="/search/genre/?genre=steampunk"
+                               class="text-white text-decoration-none">Steampunk</a><br>
+                            <a href="/search/genre/?genre=thriller"
                                class="text-white text-decoration-none">Thriller</a><br>
-                            <a href="http://localhost/search/theme/?theme=Dystopia"
-                               class="text-white text-decoration-none">Vampire</a><br>
-                            <a href="http://localhost/search/theme/?theme=Mythology"
+                            <a href="/search/genre/?genre=young-adult"
                                class="text-white text-decoration-none">Young Adult</a><br>
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade m-5 p-5 position-relative themes" id="pills-themes" role="tabpanel"
+                <div class="tab-pane fade m-4 p-3 p-md-5 position-relative themes" id="pills-themes" role="tabpanel"
                      aria-labelledby="pills-themes-tab">
                     <div class="row text">
-                        <div class="col-12 col-md-6">
-                            <a href="http://localhost/search/theme/?theme=Adventure"
+                        <div class="col-12 col-md-6 link-pink px-0">
+                            <a href="/search/theme/?theme=Adventure"
                                class="text-white text-decoration-none">Adventure</a><br>
-                            <a href="http://localhost/search/theme/?theme=Chick-Lit"
+                            <a href="/search/theme/?theme=Chick Lit"
                                class="text-white text-decoration-none">Chick lit</a><br>
-                            <a href="http://localhost/search/theme/?theme=Classics"
+                            <a href="/search/theme/?theme=Classics"
                                class="text-white text-decoration-none">Classics</a><br>
-                            <a href="http://localhost/search/theme/?theme=Dystopia"
+                            <a href="/search/theme/?theme=Dystopia"
                                class="text-white text-decoration-none">Dystopia</a><br>
-                            <a href="http://localhost/search/theme/?theme=Epic-Fantasy"
+                            <a href="/search/theme/?theme=Epic Fantasy"
                                class="text-white text-decoration-none">Epic Fantasy</a><br>
-                            <a href="http://localhost/search/theme/?theme=Fear"
+                            <a href="/search/theme/?theme=Fear"
                                class="text-white text-decoration-none">Fear</a><br>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <a href="http://localhost/search/theme/?theme=Historical"
+                            <a href="/search/theme/?theme=Historical"
                                class="text-white text-decoration-none">Historical</a><br>
-                            <a href="http://localhost/search/theme/?theme=Humor"
-                               class="text-white text-decoration-none">Humor</a><br>
-                            <a href="http://localhost/search/theme/?theme=Magic"
+                        </div>
+                        <div class="col-12 col-md-6 link-pink px-0">
+                            <a href="/search/theme/?theme=Humor"
+                               class="text-white ">Humor</a><br>
+                            <a href="/search/theme/?theme=Magic"
                                class="text-white text-decoration-none">Magic</a><br>
-                            <a href="http://localhost/search/theme/?theme=Mistery"
+                            <a href="/search/theme/?theme=Magic"
                                class="text-white text-decoration-none">Mistery</a><br>
-                            <a href="http://localhost/search/theme/?theme=Mythology"
+                            <a href="/search/theme/?theme=Mythology"
                                class="text-white text-decoration-none">Mythology</a><br>
+                            <a href="/search/theme/?theme=Paranormal"
+                               class="text-white text-decoration-none">Paranormal</a><br>
+                            <a href="/search/theme/?theme=Rebellion"
+                               class="text-white text-decoration-none">Rebellion</a><br>
                         </div>
                     </div>
                 </div>
