Added events in book/author. Fixed event search & styling. Bug fixing. Improved cart. Fixed API event search. Added api call to get events for a specific book.

--- a/public/event/index.html
+++ b/public/event/index.html
@@ -48,6 +48,7 @@ Loading template
                     <h5 class="text-dark"><i class="fa fa-clock-o"></i> <span class="event-time">Date & time</span></h5>
                 </div>
                 <div class="mt-5">
+                    <h5 class="text-dark">The author will present</h5>
                     <h5><i class="fa fa-book text-purple"></i> <a href="#"
                                                                   class="text-purple text-decoration-none event-book">Book
                         name</a></h5>
@@ -111,6 +112,7 @@ Loading template
                     <h5 class="text-dark"><i class="fa fa-clock-o"></i> <span class="event-time">Date & time</span></h5>
                 </div>
                 <div class="mt-5">
+                    <h5 class="text-dark">The author will present</h5>
                     <h5><i class="fa fa-book text-purple"></i> <a href="#"
                                                                   class="text-purple text-decoration-none event-book">Book
                         name</a></h5>
