--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -50,8 +50,8 @@
     </h6></button>
 </div>
 
-<div class="container d-none empty-cart">
-    <h1>The cart is empty</h1>
+<div class="container d-none empty-cart mt-5">
+    <h5 class="font-weight-bold text-dark">your cart is empty, <a href="/search/">add something!</a></h5>
 </div>
 
 <div class="fixed-bottom vw-100 shadow d-block d-lg-none">
