--- a/public/search/genre/index.html
+++ b/public/search/genre/index.html
@@ -52,7 +52,7 @@ Loading template
     <div class="container text-pink">
         <div class="row">
             <div class="col-6">
-                <button class="next btn btn-outline-pink navigation-btn rounded-pill" type="button">
+                <button class="previous btn btn-outline-pink navigation-btn rounded-pill" type="button">
                     <i class="fa fa-angle-left"></i>
                     <span class="ml-2">previous</span>
                 </button>
