--- a/public/register/index.html
+++ b/public/register/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/lib/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
-    <link rel="stylesheet" href="/register/scss/calendar.css">
+    <link rel="stylesheet" href="/register/scss/datepicker.css">
 
 </head>
 
