--- a/public/search/more/index.html
+++ b/public/search/more/index.html
@@ -34,7 +34,7 @@ Loading template
 
 
 <div class="container-fluid keyword bg-pink">
-    <div class="container text-white py-5">
+    <div class="container text-white py-3">
         <form class="search-form">
             <div class="row">
                 <div class="col-12 col-md">
@@ -43,7 +43,7 @@ Loading template
                 </div>
                 <div class="col-12 col-md-auto px-0">
                     <select name="orderby"
-                            class="text-capitalize form-control no-glow border-0 custom-select custom-select-lg bg-dark rounded-pill text-white filter orderby">
+                            class="text-capitalize form-control no-glow border-0 custom-select bg-dark rounded-pill text-white filter orderby">
                         <option selected value="default">order by</option>
                         <option value="price">price</option>
                         <option value="author">author</option>
