--- a/public/about/index.html
+++ b/public/about/index.html
@@ -15,8 +15,11 @@
 
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="warning"></div>
-
-
+<div class="container-fluid bg-warning px-0 ">
+    <div class="container h-100">
+        <h3 class="text-dark my-auto title py-3">About us</h3>
+    </div>
+</div>
 <div class="container my-5 py-4">
     <div class="row h-100">
         <div class="col-12 h-100 col-lg-5">
