--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -16,10 +16,11 @@
 
 <body>
 <div class="nav-placeholder"></div>
-<div class="breadcrumb-placeholder" color="pink"></div>
+<div class="breadcrumb-placeholder" color="primary"></div>
 
 <!-- Modal -->
-<div class="modal fade" id="address-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="address-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -38,16 +39,17 @@
     </div>
 </div>
 
-<div class="container-fluid bg-primary px-0">
-    <div class="container h-100">
-        <h5 class="text-white my-auto title py-3">Shopping cart</h5>
+<div class="container-fluid bg-primary">
+    <div class="container text-white py-4">
+        <div class="row">
+            <div class="col">
+                <h2 class="name text-capitalize">Your shopping cart</h2>
+                <button class="btn btn-outline-white rounded-bobooky px-3" onclick="window.history.back();">
+                    <i class="fa fa-arrow-left mr-2"></i> back to shopping
+                </button>
+            </div>
+        </div>
     </div>
-</div>
-
-<div class="container h-100">
-    <button class="border-0 bg-transparent" onclick="window.history.back();"><h6 class="text-primary py-3">
-        <span class="fa fa-arrow-left"></span> back to shop
-    </h6></button>
 </div>
 
 <div class="container d-none empty-cart mt-5">
@@ -63,7 +65,7 @@
                         <h6>Subtotal + delivery:</h6>
                     </div>
                     <div class="row">
-                        <h5 class="summary-subtotal">€ 0.00</h5> <h5>+</h5> <h5 class="summary-delivery">free</h5>
+                        <h5 class="summary-subtotal">€ 0.00</h5> <h5 class="mx-2">+</h5> <h5 class="summary-delivery">free delivery</h5>
                     </div>
                 </div>
             </div>
@@ -108,7 +110,8 @@
                     </div>
                 </div>
                 <div class="d-flex flex-column h-25">
-                    <button class="btn btn-primary align-self-end mt-auto mb-4 w-100 rounded-pill buy-button">Buy now</button>
+                    <button class="btn btn-primary align-self-end mt-auto mb-4 w-100 rounded-pill buy-button">Buy now
+                    </button>
                 </div>
             </div>
         </div>
