--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -18,41 +18,20 @@
 
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="secondary"></div>
-<div class="section container main text-white">
-    <div class="container">
+<div class="container-fluid bg-secondary">
+    <div class="container text-dark py-3">
         <div class="row">
-            <div class="col-12 col-md-6 pt-3">
-                <div class="d-none d-md-block">
-                    <div class="position-fixed bg-dark in-front">
-                        <h2 class="font-weight-bold text-secondary my-3">About you</h2>
-                        <div class="container mt-4" style="font-size: 16px;">
-                            <div class="row">
-                                <div class="col-1 text-center">
-                                    <i class="fa fa-user mr-1"></i>
-                                </div>
-                                <div class="col d-flex justify-content-center flex-column">
-                                    <label class="name-placeholder">Name Surname</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-1 text-center">
-                                    <i class="fa fa-at mr-1"></i>
-                                </div>
-                                <div class="col d-flex justify-content-center flex-column">
-                                    <label class="email-placeholder">Email</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-1 text-center"><i class="fa fa-birthday-cake mr-1"></i>
-                                </div>
-                                <div class="col d-flex justify-content-center flex-column">
-                                    <label class="birthday-placeholder">Birth date</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="d-block d-md-none">
+            <div class="col">
+                <h2 class="name">Your profile</h2>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="section container main text-white">
+    <div class="row">
+        <div class="col-12 col-md-6 pt-3">
+            <div class="d-none d-md-block">
+                <div class="position-fixed bg-dark in-front">
                     <h2 class="font-weight-bold text-secondary my-3">About you</h2>
                     <div class="container mt-4" style="font-size: 16px;">
                         <div class="row">
@@ -81,13 +60,41 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 pt-3 mb-5">
-                <h2 class="font-weight-bold text-secondary my-3">Your addresses</h2>
-                <div class="container">
-                    <div id="address-container"></div>
-                    <a href="new/" class="btn float-right text-secondary p-0">
-                        <i class="fa fa-plus-circle fa-3x"></i></a>
+            <div class="d-block d-md-none">
+                <h2 class="font-weight-bold text-secondary my-3">About you</h2>
+                <div class="container mt-4" style="font-size: 16px;">
+                    <div class="row">
+                        <div class="col-1 text-center">
+                            <i class="fa fa-user mr-1"></i>
+                        </div>
+                        <div class="col d-flex justify-content-center flex-column">
+                            <label class="name-placeholder">Name Surname</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1 text-center">
+                            <i class="fa fa-at mr-1"></i>
+                        </div>
+                        <div class="col d-flex justify-content-center flex-column">
+                            <label class="email-placeholder">Email</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1 text-center"><i class="fa fa-birthday-cake mr-1"></i>
+                        </div>
+                        <div class="col d-flex justify-content-center flex-column">
+                            <label class="birthday-placeholder">Birth date</label>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 pt-3 mb-5">
+            <h2 class="font-weight-bold text-secondary my-3">Your addresses</h2>
+            <div class="container">
+                <div id="address-container"></div>
+                <a href="new/" class="btn float-right text-secondary p-0">
+                    <i class="fa fa-plus-circle fa-3x"></i></a>
             </div>
         </div>
     </div>
