--- a/public/search/index.html
+++ b/public/search/index.html
@@ -30,7 +30,11 @@ Loading template
 
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="pink"></div>
-
+<div class="container-fluid bg-pink px-0 ">
+    <div class="container h-100">
+        <h3 class="text-white my-auto title py-3">Search</h3>
+    </div>
+</div>
 <div class="section search mt-5">
     <div class="container">
         <form class="search-form">
