Footer links + fixed coherent breadcrumb style

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -17,13 +17,13 @@
 <div class="breadcrumb-placeholder" color="warning"></div>
 <div class="container-fluid bg-warning px-0 ">
     <div class="container h-100">
-        <h3 class="text-dark my-auto title py-3">About us</h3>
+        <h3 class="text-white my-auto py-3">About us</h3>
     </div>
 </div>
 <div class="container my-5 py-4">
     <div class="row h-100">
         <div class="col-12 h-100 col-lg-5">
-            <h5 class="mt-3">About us</h5>
+            <h5 class="mt-3">Hello there!</h5>
             <p class="my-3">
                 Bobooky is the new platform where you can search and purchase the most famous and well rated books of our time.
                 <br>Our catalog is always updated and enriched with readers reviews and rankings,
