--- a/public/discover/index.html
+++ b/public/discover/index.html
@@ -24,14 +24,14 @@
                     <h3>Choose your next reading by:</h3>
                 </li>
                 <li class="nav-item">
-                    <a class="text-decoration-none" id="pills-genre-tab" data-toggle="pill" href="#pills-genre"
+                    <a class="text-decoration-none rounded-pill" id="pills-genre-tab" data-toggle="pill" href="#pills-genre"
                        role="tab"
                        aria-controls="pills-genre" aria-selected="true"><h3 id="genres" class="border-white text-white">
                         Genre</h3></a>
                 </li>
                 <h4 class="d-inline mx-3">or</h4>
                 <li class="nav-item">
-                    <a class="text-decoration-none" id="pills-themes-tab" data-toggle="pill" href="#pills-themes"
+                    <a class="text-decoration-none rounded-pill" id="pills-themes-tab" data-toggle="pill" href="#pills-themes"
                        role="tab"
                        aria-controls="pills-genre" aria-selected="true">
                         <h3 id="themes" class="bottom border-white text-white">
@@ -140,25 +140,25 @@
                     </div>
                     <div class="col-6 col-md-3 px-3">
                         <ul class="px-3 link-pink">
-                            <a class="text-light" href="">All the books</a><br>
-                            <a class="text-light" href="">The latest books</a><br>
-                            <a class="text-light" href="">All genres</a><br>
-                            <a class="text-light" href="">All themes</a><br>
-                            <a class="text-light" href="">Bestsellers</a><br>
-                            <a class="text-light" href="">Our favorites</a><br>
+                            <a class="text-light" href=/search"">Search</a><br>
+                            <a class="text-light" href=/search/more/?keyword=latest"">The latest books</a><br>
+                            <a class="text-light" href="/discover/?show=genres">All genres</a><br>
+                            <a class="text-light" href="/discover/?show=themes">All themes</a><br>
+                            <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a><br>
+                            <a class="text-light" href="/search/more/?keyword=favourites">Our favorites</a><br>
                         </ul>
                     </div>
                     <div class="col-6 col-md-3 px-3 mb-5">
                         <div class="link-danger">
-                            <a class="text-light" href="">All the authors</a><br>
+                            <a class="text-light" href="/search/author/?q=">All the authors</a><br>
                         </div>
                         <div class="link-purple">
-                            <a class="text-light" href="">All the events</a><br>
+                            <a class="text-light" href="/search/event/?q=">All the events</a><br>
                         </div>
                         <div class="link-warning">
-                            <a class="text-light" href="">About us</a><br>
-                            <a class="text-light" href="">Contact us</a><br>
-                            <a class="text-light" href="">Ordering & Shipping</a>
+                            <a class="text-light" href="/about/">About us</a><br>
+                            <a class="text-light" href="/about/contact">Contact us</a><br>
+                            <a class="text-light" href="/about/shipping">Ordering & Shipping</a>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 px-3">
