--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <a href="#surprise" class="text-decoration-none">
         <div class="wrapper text-center text-decoration-none">
             <h5 class="text-white text-decoration-none">Surprise me!</h5>
-            <i id="surprise"  class="fa fa-2x fa-chevron-down text-white text-decoration-none"></i>
+            <i id="surprise"  class="fa fa-2x fa-angle-down text-white text-decoration-none"></i>
         </div>
     </a>
 </div>
@@ -52,7 +52,7 @@
 <!-- LATEST -->
 <div class="whats-new" id="whats-new">
     <div class="container">
-        <div class="container text-dark my-5">
+        <div class="container text-dark my-5 pt-5">
             <div class="row align-items-baseline">
                 <div class="col-12 col-sm-auto">
                     <div class="row">
