--- a/public/profile/index.html
+++ b/public/profile/index.html
@@ -19,10 +19,10 @@
 <div class="nav-placeholder"></div>
 <div class="breadcrumb-placeholder" color="secondary"></div>
 <div class="container-fluid bg-secondary">
-    <div class="container text-dark py-3">
+    <div class="container h-100">
         <div class="row">
             <div class="col">
-                <h2 class="name">Your profile</h2>
+                <h3 class="name text-white my-auto py-3">Your profile</h3>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
         <div class="col-12 col-md-6 pt-3">
             <div class="d-none d-md-block">
                 <div class="position-fixed bg-dark in-front">
-                    <h2 class="font-weight-bold text-secondary my-3">About you</h2>
+                    <h4 class="font-weight-bold text-secondary my-3">Personal info</h4>
                     <div class="container mt-4" style="font-size: 16px;">
                         <div class="row">
                             <div class="col-1 text-center">
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="d-block d-md-none">
-                <h2 class="font-weight-bold text-secondary my-3">About you</h2>
+                <h4 class="font-weight-bold text-secondary my-3">Personal info</h4>
                 <div class="container mt-4" style="font-size: 16px;">
                     <div class="row">
                         <div class="col-1 text-center">
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="col-12 col-md-6 pt-3 mb-5">
-            <h2 class="font-weight-bold text-secondary my-3">Your addresses</h2>
+            <h4 class="font-weight-bold text-secondary my-3">Your addresses</h4>
             <div class="container">
                 <div id="address-container"></div>
                 <a href="new/" class="btn float-right text-secondary p-0">
