--- a/public/about/contact/index.html
+++ b/public/about/contact/index.html
@@ -17,7 +17,7 @@
 
 <div class="container-fluid bg-warning px-0 ">
     <div class="container h-100">
-        <h3 class="text-dark my-auto title py-3">Contact us *</h3>
+        <h3 class="text-white my-auto title py-3">Contact us *</h3>
     </div>
 </div>
 
