--- a/public/about/shipping/index.html
+++ b/public/about/shipping/index.html
@@ -18,7 +18,7 @@
 <div class="breadcrumb-placeholder" color="warning"></div>
 <div class="container-fluid bg-warning px-0 ">
     <div class="container h-100">
-        <h3 class="text-dark my-auto title py-3">Ordering and shipping information *</h3>
+        <h3 class="text-white my-auto py-3">Ordering and shipping information *</h3>
     </div>
 </div>
 
