--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -39,25 +39,23 @@
     </div>
 </div>
 
-<div class="container-fluid bg-primary">
-    <div class="container text-white py-4">
-        <div class="row">
-            <div class="col">
-                <h2 class="name text-capitalize">Your shopping cart</h2>
-                <button class="btn btn-outline-white rounded-bobooky px-3" onclick="window.history.back();">
-                    <i class="fa fa-arrow-left mr-2"></i> back to shopping
-                </button>
-            </div>
-        </div>
+<div class="container-fluid bg-primary px-0 mb-3">
+    <div class="container h-100">
+        <h3 class="name text-white my-auto py-3 text-capitalize">Your shopping cart</h3>
     </div>
 </div>
+<div class="container text-primary my-3">
+    <button class="btn btn-outline-primary rounded-bobooky px-3" onclick="window.history.back();">
+        <i class="fa fa-angle-left mr-2"></i> back to shopping
+    </button>
+</div>
 
-<div class="container d-none empty-cart mt-5">
+<div class="container d-none empty-cart my-5 ">
     <h5 class="font-weight-bold text-dark">your cart is empty, <a href="/search/">add something!</a></h5>
 </div>
 
 <div class="fixed-bottom vw-100 shadow d-block d-lg-none">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row bg-white">
             <div class="col-7 mt-2">
                 <div class="container">
@@ -65,7 +63,7 @@
                         <h6>Subtotal + delivery:</h6>
                     </div>
                     <div class="row">
-                        <h5 class="summary-subtotal">€ 0.00</h5> <h5 class="mx-2">+</h5> <h5 class="summary-delivery">free delivery</h5>
+                        <h5 class="summary-subtotal">€ 0.00</h5> <h5 class="mx-2">+</h5> <h5 class="summary-delivery">free</h5>
                     </div>
                 </div>
             </div>
@@ -117,12 +115,65 @@
         </div>
     </div>
 </div>
+<div class="container-fluid h-auto bg-transparent mb-0 p-0 footer bottom">
+    <div class="container-fluid w-100 bg-dark p-0 m-0">
+        <div class="flex-column w-100 text-center py-3 mt-3">
+            <a class="fa text-white text-decoration-none fa-2x fa-angle-up" href="#top"></a>
+        </div>
+        <div class="container text-white">
+            <div class="row py-5">
+                <div class="col-3 d-none d-md-block">
+                    <a class="navbar-brand-b" href="/">
+                        <img src="/assets/images/logo_vettoriale.svg"/>
+                    </a>
+                </div>
+                <div class="col-6 col-md-3 px-3">
+                    <ul class="px-3 link-pink">
+                        <a class="text-light" href=/search"">Search</a><br>
+                        <a class="text-light" href=/search/more/?keyword=latest"">The latest books</a><br>
+                        <a class="text-light" href="/discover/?show=genres">All genres</a><br>
+                        <a class="text-light" href="/discover/?show=themes">All themes</a><br>
+                        <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a><br>
+                        <a class="text-light" href="/search/more/?keyword=favourites">Our favorites</a><br>
+                    </ul>
+                </div>
+                <div class="col-6 col-md-3 px-3 mb-5">
+                    <div class="link-danger">
+                        <a class="text-light" href="/search/author/?q=">All the authors</a><br>
+                    </div>
+                    <div class="link-purple">
+                        <a class="text-light" href="/search/event/?q=">All the events</a><br>
+                    </div>
+                    <div class="link-warning">
+                        <a class="text-light" href="/about/">About us</a><br>
+                        <a class="text-light" href="/about/contact">Contact us</a><br>
+                        <a class="text-light" href="/about/shipping">Ordering & Shipping</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 px-3">
+                    <div class="row w-100">
+                        <a class="fa fa-facebook-f fa-2x mx-auto"></a>
+                        <a class="fa fa-twitter fa-2x mx-auto"></a>
+                        <a class="fa fa-instagram fa-2x mx-auto"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 pb-5 text-center">
+                    <span class="text-light">Made thanks to the <i class="fa fa-handshake-o"></i> between engineers and a designer</span><br><br>
+                    <span class="text-light">©Hypermedia Applications - Politecnico di Milano 2019</span><br>
+                    <span class="text-light">Alberto Mario Bellini <i class="fa fa-magic"></i> - Gianpaolo Di Pietro <i
+                            class="fa fa-server"></i> - Luna Alessia Rota <i class="fa fa-pencil"></i></span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/components/breadcrumb/breadcumb.js" type="module"></script>
-<script src="/components/footer/footer.js" type="module"></script>
 <script src="/profile/cart/cart.js" type="module"></script>
 
 </body>
