--- a/public/profile/order/index.html
+++ b/public/profile/order/index.html
@@ -19,7 +19,7 @@
 <div class="breadcrumb-placeholder" color="secondary"></div>
 <div class="container-fluid bg-secondary px-0">
     <div class="container h-100">
-        <h5 class="text-white my-auto font-weight-bold py-3">My orders</h5>
+        <h3 class="text-white my-auto py-3">My orders</h3>
     </div>
 </div>
 
