--- a/public/book/index.html
+++ b/public/book/index.html
@@ -338,13 +338,17 @@ Loading template
 
         </div>
     </div>
-    <div class="book-reviews bg-dark vh-100">
+    <div class="book-reviews bg-dark">
         <div class="container text-white">
 
             <h4 class="d-inline">Reviews (<span class="book-rating-qty">0</span>)</h4>
             <div class="text-pink ml-4 book-rating d-inline"></div>
 
             <div class="book-reviews-container d-flex flex-column justify-content-start mt-5">
+            </div>
+            <div class="ml-auto">
+                <a class="btn float-right text-pink p-0">
+                    <i class="fa fa-plus-circle fa-3x"></i></a>
             </div>
         </div>
     </div>
