--- a/public/search/event/index.html
+++ b/public/search/event/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-12 col-md-4">
-                    <input type="date" name="date" value=""
+                    <input type="text" name="date" placeholder="yyyy-mm-dd" value=""
                            class="form-control no-glow bobooky-purple form-control form-control pl-4 rounded-pill border-dark filter date">
                 </div>
                 <div class="col-12 mt-3 mt-md-0 col-md">
