--- a/public/profile/cart/index.html
+++ b/public/profile/cart/index.html
@@ -63,7 +63,8 @@
                         <h6>Subtotal + delivery:</h6>
                     </div>
                     <div class="row">
-                        <h5 class="summary-subtotal">€ 0.00</h5> <h5 class="mx-2">+</h5> <h5 class="summary-delivery">free</h5>
+                        <h5 class="summary-subtotal">€ 0.00</h5> <h5 class="mx-2">+</h5> <h5 class="summary-delivery">
+                        free</h5>
                     </div>
                 </div>
             </div>
@@ -74,7 +75,7 @@
     </div>
 </div>
 
-<div class="container shopping-cart">
+<div class="container shopping-cart mb-5">
     <div class="row">
         <div class="col shopping-cart-container"></div>
         <div class="col-3 col-lg-3 d-none d-lg-block p-0"> <!-- Summary fixed section-->
@@ -115,66 +116,14 @@
         </div>
     </div>
 </div>
-<div class="container-fluid h-auto bg-transparent mb-0 p-0 footer bottom">
-    <div class="container-fluid w-100 bg-dark p-0 m-0">
-        <div class="flex-column w-100 text-center py-3 mt-3">
-            <a class="fa text-white text-decoration-none fa-2x fa-angle-up" href="#top"></a>
-        </div>
-        <div class="container text-white">
-            <div class="row py-5">
-                <div class="col-3 d-none d-md-block">
-                    <a class="navbar-brand-b" href="/">
-                        <img src="/assets/images/logo_vettoriale.svg"/>
-                    </a>
-                </div>
-                <div class="col-6 col-md-3 px-3">
-                    <ul class="px-3 link-pink">
-                        <a class="text-light" href=/search"">Search</a><br>
-                        <a class="text-light" href=/search/more/?keyword=latest"">The latest books</a><br>
-                        <a class="text-light" href="/discover/?show=genres">All genres</a><br>
-                        <a class="text-light" href="/discover/?show=themes">All themes</a><br>
-                        <a class="text-light" href="/search/more/?keyword=bestsellers">Bestsellers</a><br>
-                        <a class="text-light" href="/search/more/?keyword=favourites">Our favorites</a><br>
-                    </ul>
-                </div>
-                <div class="col-6 col-md-3 px-3 mb-5">
-                    <div class="link-danger">
-                        <a class="text-light" href="/search/author/?q=">All the authors</a><br>
-                    </div>
-                    <div class="link-purple">
-                        <a class="text-light" href="/search/event/?q=">All the events</a><br>
-                    </div>
-                    <div class="link-warning">
-                        <a class="text-light" href="/about/">About us</a><br>
-                        <a class="text-light" href="/about/contact">Contact us</a><br>
-                        <a class="text-light" href="/about/shipping">Ordering & Shipping</a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 px-3">
-                    <div class="row w-100">
-                        <a class="fa fa-facebook-f fa-2x mx-auto"></a>
-                        <a class="fa fa-twitter fa-2x mx-auto"></a>
-                        <a class="fa fa-instagram fa-2x mx-auto"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 pb-5 text-center">
-                    <span class="text-light">Made thanks to the <i class="fa fa-handshake-o"></i> between engineers and a designer</span><br><br>
-                    <span class="text-light">©Hypermedia Applications - Politecnico di Milano 2019</span><br>
-                    <span class="text-light">Alberto Mario Bellini <i class="fa fa-magic"></i> - Gianpaolo Di Pietro <i
-                            class="fa fa-server"></i> - Luna Alessia Rota <i class="fa fa-pencil"></i></span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 <script src="/lib/jquery/dist/jquery.js"></script>
 <script src="/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/components/breadcrumb/breadcumb.js" type="module"></script>
 <script src="/profile/cart/cart.js" type="module"></script>
+<script src="/components/footer/footer.js" type="module"></script>
 
 </body>
 </html>
