Minor improvements to main.html

--- a/public/backend/main.html
+++ b/public/backend/main.html
@@ -148,7 +148,7 @@
             the
             browser will look automatically for the index in every folder.</p></li>
     </ul>
-    <div class="alert alert-primary">
+    <div class="alert alert-primary mt-3">
         <p><em>How did you ensure that HTML is not rendered server side?</em></p>
     </div>
     <p>Our backend has been developed using NodeJs and it’s purpose it to serve static pages and handle API requests by
@@ -161,7 +161,8 @@
         navbar,
         footer, dynamic page content (such as search results) and many more are loaded dynamically using a collection of
         tools that we have developed ourselves (public/lib/js/utils/template_loader.js).</p>
-    <h5 id="api">API - REST compliance</h5>
+    <h5 id="api">API</h5>
+    <h5 id="restcompliance"><span class="badge badge-info">REST compliance</span></h5>
     <div class="alert alert-primary">
         <p><em>Describe here to what extent did you follow REST principles and what are the reasons for which you might
             have
@@ -179,7 +180,7 @@
         server
         need to know the other’s state in order to work properly. Messages are exchanged atomically: to each request
         corresponds a response that does not depend on previous requests.</p>
-    <h5 id="openapi-resource-models">API - OpenAPI Resource models</h5>
+    <h5 id="openapi-resource-models"><span class="badge badge-info">OpenAPI Resource models</span></h5>
     <div class="alert alert-primary">
         <p><em>Describe here synthetically, which models you have introduced for resources.</em></p>
     </div>
@@ -509,7 +510,7 @@
         <li class="list-group-item"><p><strong>Alberto Mario Bellini</strong> learned the principles and the state of
             the art standards for
             making a
-            fully working websites. He had used web technologies in the past but never had the possibility to adopt a
+            fully working website. He had used web technologies in the past but never had the possibility to adopt a
             proper
             OpenAPI Specification in order to interact with the backend. This is something that he will carry in his
             personal toolbox forever. Furthermore he learnt the power of NodeJS and it’s flexibility when it comes to
