Minor improvements to main.html

--- a/public/backend/main.html
+++ b/public/backend/main.html
@@ -243,7 +243,7 @@
     <p>
         This diagram exploits the ER diagram syntax to highlight the main entities and relationships of our database.
         We have OpenAPI requests to access many of this relationships or entities.
-        Without going over all of our API spec, such as requests are for example:
+        Without going over all of our API specification, such requests are for example:
     </p>
     <ul class="list-group">
         <li class="list-group-item">
@@ -259,7 +259,7 @@
         <li class="list-group-item">
             Getting user information such as personal wishlist, current cart or past orders.
         </li>
-        <li  class="list-group-item">
+        <li class="list-group-item">
             A collection of image urls (large and small) for any book or author.
         </li>
     </ul>
@@ -300,6 +300,13 @@
             operations.
         </li>
     </ul>
+
+    <h5 id="runtimes">Runtimes</h5>
+    <ul class="list-group">
+        <li class="list-group-item"><strong>NodeJS</strong> : We used the NodeJs JavaScript runtime built on Chrome's V8 JavaScript engine to fully develop our whole backend server.
+        </li>
+    </ul>
+
     <h5 id="languages">Languages</h5>
     <ul class="list-group">
         <li class="list-group-item"><strong>SCSS</strong>: Extension of the css language that we used with SASS
@@ -313,7 +320,8 @@
         <li class="list-group-item"><strong>CSS</strong>: Web page styling</li>
         <li class="list-group-item"><strong>HTML</strong> : Web page skeleton structure.</li>
         <li class="list-group-item"><strong>JavaScript</strong>: General purpose scripting.</li>
-        <li class="list-group-item"><strong>jQuery</strong>: Fast, small, and feature-rich JavaScript library. It makes
+        <li class="list-group-item"><strong>jQuery</strong>: Used only in the frontend.
+            Fast, small, and feature-rich JavaScript library. It makes
             things like HTML
             document
             traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API. With
@@ -326,7 +334,6 @@
     <h5 id="Frameworks">Frameworks</h5>
     <h5 id="backend"><span class="badge badge-info">Backend</span></h5>
     <ul class="list-group">
-        <li class="list-group-item"><strong>NodeJS</strong>: Is the RunTime environment of our backend application</li>
         <li class="list-group-item"><strong>Express</strong>: This is our core web application framework that we have
             chosen for its minimality
             and
@@ -355,7 +362,8 @@
             the
             handlers for the different requests, parsing and checking the body schemas and so on.
         </li>
-        <li class="list-group-item"><strong>PostgreSQL module (pg)</strong>: This framework is used for manage the connection to the
+        <li class="list-group-item"><strong>PostgreSQL module (pg)</strong>: This framework is used for manage the
+            connection to the
             database and to execute query
             and
             fetch data for the api implementation
