--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 <form action="/search" method="get" id="search-form">
                     <div class="form-group border-white mt-3 search-bar">
                         <div class="input-group">
-                            <input type="text" name="q" class="search-query form-control pl-4 text-light border-right-0"
+                            <input type="text" name="q" class="search-query form-control pl-4 border-right-0"
                                    placeholder="Search more than 700 books">
                             <div class="input-group-append ">
                                 <button class="btn search-button round border-left-0 pr-4" type="button">
